# Gemma_HerbalCare

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: Cargo.toml
backend/migrations/: 0001_init.sql
backend/seed/: demo_seed.sql
backend/src/: db.rs  llm.rs  main.rs  models.rs  routes.rs  safety.rs
docs/: architecture.md  demo_script.md  deploy_google_cloud.md  gemma_herbalcare_3min_demo.srt  gemma_herbalcare_3min_demo_timeline.md  kaggle_submission.md  safety_policy.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  service-worker.ts
frontend/src/lib/: api.ts  connection.ts  i18n.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/consult/: +page.svelte
frontend/src/routes/herbs/: +page.svelte
scripts/: demo_video.py
